--- a/css/reg.css
+++ b/css/reg.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: #111;
+  background: #333;
   font-family: "Open Sans", sans-serif;
   display: flex;
   align-items: center;
@@ -13,11 +13,10 @@ body {
 }
 
 .container {
-  background-color: #666;
+  background-color: wheat;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
-  color: #fff;
 }
 
 a {
@@ -47,7 +46,7 @@ i {
 }
 
 .form-control label {
-  color: #ffffaa;
+  color: #666;
   display: block;
   margin-bottom: 5px;
 }
@@ -88,21 +87,15 @@ i {
 
 .form button {
   cursor: pointer;
-  background-color: #ffffee;
-  border: 2px solid #ffffee;
+  background-color: #566670;
+  border: 2px solid #566670;
   border-radius: 4px;
-  color: #222;
+  color: #ffffee;
   display: inline-block;
   font-size: 16px;
   padding: 10px;
   margin-top: 20px;
   width: 100%;
-}
-
-.form button:hover {
-  background-color: #f34242;
-  border: #f34242 2px solid;
-  color: #ffffaa;
 }
 
 .form .log {
